--- a/start-page-interface/package.json
+++ b/start-page-interface/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.4",
+    "jest": "^27.5.1",
     "jest-dom": "^4.0.0",
     "react-test-renderer": "^17.0.2"
   }
