--- a/start-page-interface/package.json
+++ b/start-page-interface/package.json
@@ -7,6 +7,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "boring-avatars": "^1.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
