--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "netlify-lambda build express",
+        "build": "netlify build express",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -17,5 +17,8 @@
     "bugs": {
         "url": "https://github.com/EvanesceExotica/stretches-site-master/issues"
     },
-    "homepage": "https://github.com/EvanesceExotica/stretches-site-master#readme"
+    "homepage": "https://github.com/EvanesceExotica/stretches-site-master#readme",
+    "devDependencies": {
+        "netlify-cli": "^10.14.0"
+    }
 }
