--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,4 @@
 ID = "083adcdb-ff9c-4929-b374-beb1130653ec"
 [build]
     functions = "functions"
-    command = "npm install && npm run build"
+    command = "netlify build"
