--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "NODE_ENV=development nodemon ./api/app.js",
+        "start": "NODE_ENV=production node dist/app.js",
+        "start-client": "react-scripts start"
     },
     "repository": {
         "type": "git",
@@ -17,7 +20,20 @@
         "url": "https://github.com/EvanesceExotica/stretches-site-master/issues"
     },
     "homepage": "https://github.com/EvanesceExotica/stretches-site-master#readme",
+    "dependencies": {
+        "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
+        "debug": "~2.6.9",
+        "dotenv": "^16.0.0",
+        "express": "~4.16.1",
+        "express-fileupload": "^1.3.1",
+        "http-errors": "~1.6.3",
+        "jade": "~1.11.0",
+        "mongoose": "^6.2.1",
+        "morgan": "~1.9.1",
+        "serverless-http": "3.1.1"
+    },
     "devDependencies": {
-        "netlify-cli": "^10.14.0"
+        "nodemon": "^2.0.15"
     }
 }
