--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "react-scripts build",
         "dev": "NODE_ENV=development nodemon ./api/app.js",
         "start": "NODE_ENV=production node dist/app.js",
         "start-client": "react-scripts start"
@@ -31,9 +38,37 @@
         "jade": "~1.11.0",
         "mongoose": "^6.2.1",
         "morgan": "~1.9.1",
-        "serverless-http": "3.1.1"
+        "serverless-http": "3.1.1",
+        "@testing-library/jest-dom": "^5.16.1",
+        "axios": "^0.25.0",
+        "form-data": "^4.0.0",
+        "nanoid": "^3.2.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.1",
+        "react-scripts": "5.0.0",
+        "react-transition-group": "^1.2.1",
+        "styled-components": "^5.3.3",
+        "web-vitals": "^2.1.4"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "devDependencies": {
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "@babel/plugin-syntax-jsx": "^7.16.7",
+        "@babel/preset-react": "^7.16.7",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^14.0.4",
+        "babel-plugin-styled-components": "^2.0.3"
     }
 }
