--- a/package.json
+++ b/package.json
@@ -28,26 +28,26 @@
     },
     "homepage": "https://github.com/EvanesceExotica/stretches-site-master#readme",
     "dependencies": {
+        "@testing-library/jest-dom": "^5.16.1",
+        "axios": "^0.25.0",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
         "debug": "~2.6.9",
         "dotenv": "^16.0.0",
-        "express": "~4.16.1",
+        "express": "^4.18.2",
         "express-fileupload": "^1.3.1",
+        "form-data": "^4.0.0",
         "http-errors": "~1.6.3",
-        "jade": "~1.11.0",
+        "jade": "^0.29.0",
         "mongoose": "^6.2.1",
         "morgan": "~1.9.1",
-        "serverless-http": "3.1.1",
-        "@testing-library/jest-dom": "^5.16.1",
-        "axios": "^0.25.0",
-        "form-data": "^4.0.0",
         "nanoid": "^3.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
-        "react-transition-group": "^1.2.1",
+        "react-scripts": "^5.0.1",
+        "react-transition-group": "^4.4.5",
+        "serverless-http": "3.1.1",
         "styled-components": "^5.3.3",
         "web-vitals": "^2.1.4"
     },
@@ -64,11 +64,11 @@
         ]
     },
     "devDependencies": {
-        "nodemon": "^2.0.15",
         "@babel/plugin-syntax-jsx": "^7.16.7",
         "@babel/preset-react": "^7.16.7",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^14.0.4",
-        "babel-plugin-styled-components": "^2.0.3"
+        "babel-plugin-styled-components": "^2.0.3",
+        "nodemon": "^2.0.15"
     }
 }
