--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.1",
         "axios": "^0.25.0",
+        "concurrently": "^7.6.0",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
         "debug": "~2.6.9",
@@ -71,5 +72,6 @@
         "@testing-library/user-event": "^14.0.4",
         "babel-plugin-styled-components": "^2.0.3",
         "nodemon": "^2.0.15"
-    }
+    },
+    "proxy": "http://localhost:9000"
 }
