--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -16,11 +16,12 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts start --port 9001",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
+      "proxy": "http://localhost:80",
     "eslintConfig": {
         "extends": [
             "react-app",
