--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "main": "app.js",
     "scripts": {
-        "start": "nodemon ./app.js localhost 9000"
+        "start": "nodemon ./app.js localhost 9080"
     },
     "dependencies": {
         "cookie-parser": "~1.4.4",
@@ -14,6 +14,7 @@
         "express": "^4.18.2",
         "express-fileupload": "^1.3.1",
         "http-errors": "~1.6.3",
+        "http-proxy-middleware": "^2.0.6",
         "jade": "^0.29.0",
         "mongoose": "^6.2.1",
         "morgan": "~1.9.1"
