--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -9,6 +9,7 @@
         "nanoid": "^3.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-draggable": "^4.4.5",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "react-transition-group": "^1.2.1",
