--- a/api/package.json
+++ b/api/package.json
@@ -9,17 +9,17 @@
     "dependencies": {
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
-        "debug": "~2.6.9",
+        "debug": "~4.3.4",
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
         "express-fileupload": "^1.3.1",
-        "http-errors": "~1.6.3",
+        "http-errors": "~2.0.0",
         "http-proxy-middleware": "^2.0.6",
-        "jade": "^0.29.0",
-        "mongoose": "^6.2.1",
-        "morgan": "~1.9.1"
+        "mongoose": "^7.0.0",
+        "morgan": "~1.10.0",
+        "pug": "^3.0.2"
     },
     "devDependencies": {
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.21"
     }
 }
