--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,9 +1,9 @@
-FROM node:10 AS ui-build
+FROM node:lts-alpine AS ui-build
 WORKDIR /usr/src/app
 COPY stretches-site/ ./stretches-site/
 RUN cd stretches-site && npm install && npm run build
 
-FROM node:10 AS server-build
+FROM node:lts-alpine AS server-build
 WORKDIR /root/
 COPY --from=ui-build /usr/src/app/stretches-site/build ./stretches-site/build
 COPY api/package*.json ./api/
