--- a/stretches-site/Dockerfile
+++ b/stretches-site/Dockerfile
@@ -11,10 +11,10 @@ COPY package.json /usr/src/app
 COPY yarn.lock /usr/src/app
 
 # Install dependecies
-#RUN npm set progress=false \
-#    && npm config set depth 0 \
-#    && npm i install
-RUN npm ci
+
+RUN yarn config set depth 0 \
+    && yarn install
+# RUN npm ci
 
 # Get all the code needed to run the app
 COPY . /usr/src/app
@@ -23,19 +23,17 @@ COPY . /usr/src/app
 EXPOSE 9000
 
 # Serve the app
-CMD ["npm", "start"]
+CMD ["yarn", "run", "start"]
 
 FROM development as dev-envs
-RUN <<EOF
-apt-get update
-apt-get install -y --no-install-recommends git
-EOF
+RUN apt-get update \
+&& apt-get install -y --no-install-recommends git
 
-RUN <<EOF
-useradd -s /bin/bash -m vscode
-groupadd docker
-usermod -aG docker vscode
-EOF
+
+RUN useradd -s /bin/bash -m vscode \
+&& groupadd docker \
+&& usermod -aG docker vscode
+
 # install Docker tools (cli, buildx, compose)
 COPY --from=gloursdocker/docker / /
-CMD [ "npm", "start" ]
+CMD [ "yarn", "run", "start" ]
