--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -17,12 +17,12 @@
         "web-vitals": "^3.1.1"
     },
     "scripts": {
-        "start": "react-scripts start --port 9001",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://localhost:9000",
+    "proxy": "http://api:9000",
     "eslintConfig": {
         "extends": [
             "react-app",
