--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
         ports:
-            - 9000:9000
+            - 3000:3000
         restart: "no"
         networks:
             - react-express
@@ -18,10 +18,12 @@ services:
         build:
             context: api
             target: dev-envs
+            args:
+                NODE_PORT: 3000
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
         expose:
-            - 9000
+            - 3000
         depends_on:
             - mongo
         networks:
@@ -39,19 +41,3 @@ services:
 networks:
     react-express:
     express-mongo:
-
-        # node-express-docker:
-        #     environment:
-        #         - NODE_ENV=development
-        #     build:
-        #         context: .
-        #         dockerfile: Dockerfile.dev
-        #     volumes:
-        #         - ./:/usr/app
-        #     container_name: node-express-docker
-        #     expose:
-        #         - "3000"
-        #     ports:
-        #         - "4000:4000"
-        #         - "9000"
-        #     command: npm run dev
