--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -22,7 +22,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://api:9000",
+    "proxy": "http://backend:3000",
     "eslintConfig": {
         "extends": [
             "react-app",
