--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "http-proxy-middleware": "^2.0.6"
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
+    "express-session": "^1.17.3",
+    "http-proxy-middleware": "^2.0.6",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "validator": "^13.9.0"
   }
 }
