--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
         "debug": "~4.3.4",
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
         "express-fileupload": "^1.3.1",
         "http-errors": "~2.0.0",
         "http-proxy-middleware": "^2.0.6",
