--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon app.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "~1.4.4",
         "cookie-session": "^2.0.0",
