--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
+        "concurrently": "^8.2.1",
         "cookie-parser": "~1.4.4",
         "cookie-session": "^2.0.0",
         "cors": "^2.8.5",
