--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.1",
     "cookie-session": "^2.0.0",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
