--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -23,7 +23,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://backend:3000",
+    "proxy": "http://backend:3000/",
     "eslintConfig": {
         "extends": [
             "react-app",
