--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@dnd-kit/core": "^6.0.8",
         "@testing-library/jest-dom": "^5.16.1",
         "axios": "^1.3.4",
         "form-data": "^4.0.0",
@@ -11,7 +12,7 @@
         "react-dom": "^18.2.0",
         "react-draggable": "^4.4.5",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "react-transition-group": "^4.4.5",
         "styled-components": "^5.3.8",
         "web-vitals": "^3.1.1"
