--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@dnd-kit/core": "^6.0.8",
+        "@dnd-kit/sortable": "^7.0.2",
+        "@dnd-kit/utilities": "^3.2.1",
         "@testing-library/jest-dom": "^5.16.1",
         "axios": "^1.3.4",
         "form-data": "^4.0.0",
