--- a/stretches-site/package.json
+++ b/stretches-site/package.json
@@ -17,6 +17,7 @@
         "react-scripts": "^5.0.1",
         "react-transition-group": "^4.4.5",
         "styled-components": "^5.3.8",
+        "use-sound": "^4.0.1",
         "web-vitals": "^3.1.1"
     },
     "scripts": {
